# quant

./: 2022_best_params.json  README.md  example_train_val_pipeline.py  fetch_1min_sample.py  fetch_bitcoin_1min_comprehensive.py  fetch_bitcoin_1min_real.py  pyproject.toml  run_backtest.py  run_test.py  test_data_splitter.py  test_imports.py  test_paper_polymarket.py  test_polymarket.py  test_polymarket_paper.py  test_polymarket_sdk.py  test_strategy.py  train_2022_hyperparams.py  train_2022_robust.py  train_2026_hyperparams.py  train_momentum_2022.py  validate_2022_best_params.py  validate_2022_robust.py  validate_2026_best.py  validate_2026_with_2022_params.py  verify_data.py
backtesting/: __init__.py
data/: btc_1min_test.csv  btc_2024_2025.csv
docs/: backtest_results.csv  deployment.md  paper_trading.md  polymarket_paper_trading.md  polymarket_testnet.md  std_grid_search.csv  strategy_comparison.md  window_grid_search.csv  zscore_grid_search.csv
infrastructure/: __init__.py  execution.py  paper_trading.py  polymarket.py  simulation.py
infrastructure/data/: __init__.py  generator.py
observability/: __init__.py  alerts.py  metrics.py  tracker.py
scripts/: fetch_btc_data.py
src/quant.egg-info/: PKG-INFO  (+3 more)
strategies/: __init__.py  mean_reversion.py  mean_reversion_polymarket.py  momentum.py
tests/: test_run.py
train_results/: mean_reversion_2022_on_2026.json  mean_reversion_2022_robust_val.json  mean_reversion_2026_best.json  mean_reversion_2026_val.json  momentum_binary_2022_best.json  momentum_binary_2022_recommended.json  recommended_params.json
(+54 files in other folders)
